--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(homework2 VERSION 1.0
-    DESCRIPTION "Homework3_Serafino"
+project(project VERSION 1.0
+    DESCRIPTION "exam_project_Serafino"
     )
 
 add_compile_options(-std=c++17)
@@ -19,13 +19,12 @@ find_package(pybind11 REQUIRED)
 include_directories(SYSTEM ${pybind11_INCLUDE_DIRS})
 
 # Add the Python modules
-pybind11_add_module(GradientDescent
+pybind11_add_module(optimization
 OptimisationModule/src/Optimisation.cpp
 OptimisationModule/include/Optimisation.hpp
 OptimisationModule/src/Optimisation_py.cpp
     )
 
-target_link_libraries(moduleC PRIVATE ${MUPARSERX_LIBRARY})
-target_include_directories(moduleA PRIVATE StatisticsModule/include)
-target_include_directories(moduleC PRIVATE NumericalIntegration/include)
+target_link_libraries(optimization PRIVATE ${MUPARSERX_LIBRARY})
+target_include_directories(optimization PRIVATE OptimisationModule/include)
 #endif()
