prepare for exam

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,8 @@ project(project VERSION 1.0
 add_compile_options(-std=c++17)
 
 # Search for Boost
-find_package(Boost 1.83 REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
-
-# Search for muparserx
-find_package(muparserx 4.0 REQUIRED)
-include_directories(${muparserx_INCLUDE_DIRS})
+#find_package(Boost 1.83 REQUIRED)
+#include_directories(${Boost_INCLUDE_DIRS})
 
 # Search for Pybind
 find_package(pybind11 REQUIRED)
@@ -20,11 +16,9 @@ include_directories(SYSTEM ${pybind11_INCLUDE_DIRS})
 
 # Add the Python modules
 pybind11_add_module(optimization
-OptimisationModule/src/Optimisation.cpp
-OptimisationModule/include/Optimisation.hpp
-OptimisationModule/src/Optimisation_py.cpp
+    OptimisationModule/src/Optimisation.cpp
+    OptimisationModule/include/GradientDescent.tpl.hpp
+    OptimisationModule/src/Optimisation_py.cpp
     )
 
-target_link_libraries(optimization PRIVATE ${MUPARSERX_LIBRARY})
 target_include_directories(optimization PRIVATE OptimisationModule/include)
-#endif()
